Fix Bug 857: GlueGen produces erroneous file URI on Windows, which breaks Netbeans's JarURLStreamHandler
- 'URL IOUtil.toURL(URI)'

  - Needs to encode the file-path portion on Windows(*) if exists.
    The file-path here shall only be encoded as follows:
      - backslash -> slash
      - ensure starting with slash

    (*) We perform above action for all OS,
    if 'false == File.separator.equals("/")'

  - Added high verbosity in DEBUG mode to easy debugging
    for future cases ..

- Cleanup URI/URL unit tests, i.e. split URLCompositionTest into:
  - TestIOUtilURICompose
  - TestIOUtilURIHandling (Now covers Bug 857 as well)
  - TestUrisWithAssetHandler
  - TestURIQueryProps

Tested all unit tests manually on GNU/Linux and Windows w/ JRE 7u45